--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/onlyarte/edetek-restful-api#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "eslint": "^4.15.0",
     "express": "^4.16.2",
     "mysql": "^2.15.0"
